# Eurotram

./: .gitignore  Praha.etmap  README.md  line(1).etscr  line(3).etscr  line.etscr  questionsForTramDriver.txt  t3rp.cfg  untitled.glb
.github/workflows/: CodeCounter.yml
assets/audio/: Linka13.etanc
assets/audio/source/: DPPjingleSource.txt
assets/models/Building/: BuildingCorner.blend  BuildingCorner.glb  BuildingFamily.blend  BuildingFamily.glb  BuildingNormal.blend  BuildingNormal.glb  BuildingNormal.mtl  BuildingPrefab.blend  BuildingPrefab.glb  NatMuseumOld.blend  ZizkovTVTower.blend
assets/models/Rail/: Rail.blend  Rail.fbx  Rail.mtl
assets/models/Signal/: Pole.glb  Presig.glb  Signal.blend  Signal.glb  Switch.glb
assets/models/Stop/: Stop.blend  Stop.glb  Stop.mtl
assets/models/Streetlamp/: Streetlamp.blend  Streetlamp.glb  Streetlamp.mtl
assets/models/T3RP/: ButtonTexture.kra  PaintTexture.kra  PaintTexturePID.kra  PaintTexturePLF.kra  T3.blend  T3.mtl  backControlTexture.kra  controllerTexture.kra  coverTexture.kra  coverTexturePLF.kra  doorTexture.kra  doorTexture.kra~  doorTexture.png~  driverDoorTexture.kra  driverDoorTexture.png~  sanderHandleTexture.kra  seat.blend
assets/models/T3RP/old/: controllerTexture.kra  doorTexture.kra  doorTexturePLF.kra  pedalTexture.kra  sanderHandleTexture.kra  ventTexture.kra
assets/models/Tree/: Tree.blend  Tree.glb
documentation/: .~lock.rocnikova_prace_tramvajovy_simulator#  rocnikova_prace_tramvajovy_simulator  rocnikova_prace_tramvajovy_simulator_plan  rocnikova_prace_tramvajovy_simulator_zdroje
documentation/graphs/: glPipeline.drawio
documentation/presentation/: presentation
source/: CMakeLists.txt  compile_commands.json
source/.cache/clangd/index/: Loader.cpp.D4FD9579032C106C.idx  Main.cpp.B0D4AD3A9E95028F.idx  Main.cpp.DDFD6AB84C7E644E.idx
source/announcementmaker/: index.html  style.css
source/announcementmaker/js/: AudioLoad.js  Element.js  File.js
source/app/: Application.cpp  Application.hpp  ApplicationMainLoop.cpp  ApplicationPhysics.cpp  Main.cpp
source/app/area/: Area.hpp  Bezier.hpp  Line.cpp  Line.hpp  Map.cpp  Map.hpp
source/app/audio/: Announcements.cpp  Announcements.hpp  Audio.hpp  AudioManager.cpp  AudioManager.hpp  SFX.cpp  SFX.hpp  SoundSimulation.cpp  SoundSimulation.hpp  SoundTransform.cpp  SoundTransform.hpp
source/app/base/: Base.hpp  Batcher.cpp  Batcher.hpp  Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Event.hpp  FreeUtils.cpp  FreeUtils.hpp  FrustumCulling.cpp  FrustumCulling.hpp  Instancer.cpp  Instancer.hpp  Lighting.hpp  Math.cpp  Math.hpp  OIT.cpp  OIT.hpp  Ray.hpp  ScreenRender.cpp  ScreenRender.hpp  Setup.hpp  Shader.cpp  Shader.hpp  Sky.hpp  Text.hpp  Texture.cpp  Texture.hpp  TextureIm.hpp  Transformation.cpp  Transformation.hpp  Uniform.cpp  Uniform.hpp  UniformIm.hpp  Window.cpp  Window.hpp
source/app/model/: Animation.cpp  Animation.hpp  Bones.hpp  Lighting.cpp  Lighting.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  ModelLoading.cpp  ModelLoading.hpp  Shadows.cpp  Shadows.hpp  Sky.cpp  Sky.hpp
source/app/objects/: Building.hpp  Button.hpp  Landmark.hpp  Lightpole.cpp  Lightpole.hpp  Node.cpp  Node.hpp  Objects.hpp  Presignal.cpp  Presignal.hpp  Radiobox.cpp  Radiobox.hpp  Sign.cpp  Sign.hpp  Signal.cpp  Signal.hpp  Station.hpp  StationPillar.cpp  StationPillar.hpp  StationTrack.cpp  StationTrack.hpp  Switch.cpp  Switch.hpp  SwitchSignal.cpp  SwitchSignal.hpp  Texparcel.cpp  Texparcel.hpp  Track.cpp  Track.hpp  Tree.hpp  Trigger.cpp  Trigger.hpp  Wall.hpp  Wire.hpp
source/app/objects/vehicles/: APEX.cpp  APEX.hpp  BUSE.cpp  BUSE.hpp  T3RP.cpp  T3RP.hpp  Vehicle.cpp  Vehicle.hpp
source/app/physics/: Curve.hpp  Drag.cpp  Drag.hpp  ElectricalCircuit.cpp  ElectricalCircuit.hpp  FlangeClimbing.hpp  Force.hpp  Friction.cpp  Friction.hpp  Nadal.cpp  Nadal.hpp  PhysBase.cpp  PhysBase.hpp  Physics.hpp  PhysicsUpdate.cpp  PhysicsUpdate.hpp  Weather.cpp  Weather.hpp
source/app/points/: Points.hpp
source/app/save/: Annunciator.cpp  Annunciator.hpp  Map.hpp  Scenario.hpp
source/app/shader/: OITFragment.glsl  btFragment.glsl  btVertex.glsl  fragment.glsl  screenFragment.glsl  screenVertex.glsl  shadowFragment.glsl  shadowVertex.glsl  vertex.glsl  weatherFragment.glsl  weatherVertex.glsl
source/depend/: libGLEW.so.2.2.0
source/trackgenerator/: idea.txt  index.html  style.css
source/trackgenerator/js/: Buildings.js  CanvasLib.js  FileSave.js  Grid.js  Landmark.js  Light.js  Line.js  Map.js  MapLayer.js  ModeSet.js  Nodes.js  RadioBox.js  Scenario.js  Sign.js  Signal.js  Station.js  Statistics.js  Switch.js  Texparcels.js  Track.js  Tree.js  Utils.js  Wall.js
tramDriverQuestions/: kastner1.txt  kastner2.txt  template.txt  toInterview.txt
ueproj/Eurotram/: Eurotram.code-workspace  Eurotram.uproject  Makefile
ueproj/Eurotram/Config/: DefaultEngine.ini  DefaultGame.ini
ueproj/Eurotram/Source/: Eurotram.Target.cs  EurotramEditor.Target.cs
ueproj/Eurotram/Source/Eurotram/: Eurotram.Build.cs  Eurotram.cpp  EurotramCharacter.cpp  EurotramCharacter.h  EurotramGameMode.cpp  EurotramGameMode.h  EurotramPickUpComponent.cpp  EurotramPickUpComponent.h  EurotramProjectile.cpp  EurotramProjectile.h  EurotramWeaponComponent.cpp  EurotramWeaponComponent.h
